<resources>
    <string name="app_name">Spending Management SQL</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="moneyHint">$50.00</string>
    <string name="dining_out_hint">Dining Out</string>
    <string name="enter_btn_text">Enter</string>
    <string name="history">Transaction History</string>
    <string name="col1Header">Date</string>
    <string name="col2Header">Amount</string>
    <string name="col3Header">Category</string>
    <string name="searchFieldHint">Search by Date</string>
    <string name="search_button_text">Search</string>
    <string name="search_by_type">Search by Amount</string>
</resources>
